# bachelor_project

./: BOM_våk_field_flux.xlsx  LICENSE  README.md  config.txt  docker_compose.yml  dockerfile.txt
CAD-files/: Beam and brackets simple.stp  Framework.stp  Lokk_strut.stp  Piston damper.stp  assembly_lokk.stp  botte_kant.stp  botte_kant_feste.stp  botte_skjort.stp  botte_skjort_feste.stp  botte_sylinder_tredelt_sheet.stp  connector_cross.stp  lokk.stp  lufte_lokk.stp  servo_arm.stp  servofeste.stp  vifte.stp
camera_node/: camera.py  package.xml  setup.py
fan_node/: package.xml  setup.py  vifte.py
lift_node/: lift.py  package.xml  setup.py
logger_node/: logger.py  package.xml  setup.py
main_node/: main.py  package.xml  setup.py
rc_servo_node/: package.xml  rc_servo.py  setup.py
sensor_node/: package.xml  sensor.py  setup.py
