<?xml version="1.0"?>
<package format="3">
  <name>camera_node</name>
  <version>0.0.0</version>
  <description>Camera node to control two HD video cameras and publish image data.</description>
  <maintainer email="s377397@oslomet.no">Chris</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



