<?xml version="1.0"?>
<package format="3">
  <name>lift_node</name>
  <version>0.0.0</version>
  <description>Lift node for controlling the lift mechanism in the robot using GPIO and PWM devices.</>  <maintainer email="s377397@oslomet.no">Chris</maintainer>
  <license>MIT</license>

  <!-- ROS 2 Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Additional Dependencies -->
  <depend>gpiozero</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export for building with ament_python -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



