<?xml version="1.0"?>
<package format="3">
  <name>sensor_node</name>
  <version>0.0.0</version>
  <description>
    A ROS 2 package for reading data from sensors measuring temperature, humidity, and pressure.
    This package uses a BME280 sensor to read these environmental parameters.
  </description>
  <maintainer email="s377397@oslomet.no">Chris</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Runtime dependencies -->
  <exec_depend>python-board</exec_depend>
  <exec_depend>python-busio</exec_depend>
  <exec_depend>python-adafruit-bme280</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



